# cadence-sdk

./: .gitignore  CHANGELOG.md  README.md  publish.sh  pyproject.toml
examples/: README.md  pack.sh  test_sdk.py
examples/helpdesk_agent/: README.md  __init__.py  data.py  plugin.py
examples/recommendation_agent/: README.md  __init__.py  plugin.py  schemas.py
examples/recommendation_agent/services/: __init__.py  embedding_service.py  search_service.py  sparse_embedding_service.py
examples/template_plugin/: README.md  __init__.py  plugin.py
examples/web_search_agent/: README.md  __init__.py  plugin.py
examples/webpage_reader_agent/: README.md  __init__.py  plugin.py
src/cadence_sdk/: __init__.py  exceptions.py
src/cadence_sdk/base/: __init__.py  agent.py  loggable.py  metadata.py  plugin.py
src/cadence_sdk/decorators/: __init__.py  llmcache.py  settings_decorators.py
src/cadence_sdk/registry/: __init__.py  contracts.py  plugin_registry.py
src/cadence_sdk/types/: __init__.py  sdk_messages.py  sdk_state.py  sdk_tools.py  state.py
src/cadence_sdk/utils/: __init__.py  _plugin_loader.py  directory_discovery.py  helpers.py  (+4 more)
tests/: __init__.py  conftest.py  test_agent.py  test_contracts.py  test_directory_discovery.py  test_directory_discovery_extended.py  test_installers.py  test_installers_extended.py  test_loggable.py  test_metadata.py  test_packaging.py  test_plugin.py  test_plugin_registry.py  test_sdk_init.py  test_sdk_messages.py  test_sdk_state.py  test_sdk_tools.py  test_settings_decorators.py  test_validation.py  test_validation_extended.py
(+1 files in other folders)
